--- a/product.html
+++ b/product.html
@@ -9,10 +9,10 @@
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-  <div id="app1">
+  <div id="app">
     <div class="container">
       <div class="text-end mt-4">
-        <button class="btn btn-primary" @click="openProductModal">
+        <button class="btn btn-primary" @click="openModal(true)">
           建立新的產品
         </button>
       </div>
@@ -38,7 +38,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr v-for="product in products" :key="product.id"></tr>
+          <tr v-for="product in products" :key="product.id">
             <td>{{ product.category }}</td>
             <td>{{ product.title }}</td>
             <td>{{ product.origin_price }}</td>
@@ -48,11 +48,11 @@
               <span v-else>未啟用</span>
             </td>
             <td>
-              <button type="button" class="btn btn-outline-primary btn-sm" data-id="${product.id}" @click="openProductModal">
+              <button type="button" class="btn btn-outline-primary btn-sm" data-id="${product.id}" @click="openModal(false, product)">
                 編輯
               </button>
               <button type="button" class="btn btn-sm btn-outline-danger move deleteBtn" data-action="remove"
-                data-id="${product.id}" @click="deleteProductModal"> 
+                data-id="${product.id}" @click="deleteProductModal(product)"> 
                 刪除 
               </button>
             </td>
@@ -74,66 +74,79 @@
           <div class="modal-body">
             <div class="row">
               <div class="col-sm-4">
-                <div class="mb-1">
-                  <div class="form-group">
-                    <label for="imageUrl">輸入圖片網址</label>
-                    <input type="text" class="form-control" placeholder="請輸入圖片連結">
+                <div class="form-group">
+                  <label for="imageUrl">主要圖片</label>
+                  <input v-model="tempProduct.imageUrl" type="text" class="form-control" placeholder="請輸入圖片連結">
+                  <img class="img-fluid" :src="tempProduct.imageUrl">
+                </div>
+                <div class="mb-1">多圖新增</div>
+                <div v-if="Array.isArray(tempProduct.imagesUrl)">
+                  <div class="mb-1" v-for="(img,key) in tempProduct.imagesUrl" :key="img">
+                    <div class="form-group">
+                      <label for="imageUrl">圖片網址</label>
+                      <input type="text" class="form-control" placeholder="請輸入圖片連結" v-model="tempProduct.imagesUrl[key]">
+                    </div>
+                    <img class="img-fluid" :src="image">
                   </div>
-                  <img class="img-fluid" src="" alt="">
+                  <div v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length-1]">
+                    <button class="btn btn-outline-primary btn-sm d-block w-100" @click="tempProduct.imagesUrl.push('')">
+                      新增圖片
+                    </button>
+                  </div>
+                  <div v-else>
+                    <button class="btn btn-outline-danger btn-sm d-block w-100" @click="tempProduct.imagesUrl.pop()">
+                      刪除圖片
+                    </button>
+                  </div>
                 </div>
-                <div>
-                  <button class="btn btn-outline-primary btn-sm d-block w-100">
-                    新增圖片
-                  </button>
-                </div>
-                <div>
-                  <button class="btn btn-outline-danger btn-sm d-block w-100">
-                    刪除圖片
+                <div v-else>
+                  <button class="btn btn-outline-primary btn-sm d-block w-100" @click="createImages">
+                    多圖新增
                   </button>
                 </div>
               </div>
               <div class="col-sm-8">
                 <div class="form-group">
                   <label for="title">標題</label>
-                  <input id="title" type="text" class="form-control" placeholder="請輸入標題">
+                  <input id="title" type="text" class="form-control" placeholder="請輸入標題" v-model="tempProduct.title">
                 </div>
   
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="category">分類</label>
-                    <input id="category" type="text" class="form-control" placeholder="請輸入分類">
+                    <input id="category" type="text" class="form-control" placeholder="請輸入分類" v-model="tempProduct.category">
                   </div>
                   <div class="form-group col-md-6">
-                    <label for="price">單位</label>
-                    <input id="unit" type="text" class="form-control" placeholder="請輸入單位">
+                    <label for="unit">單位</label>
+                    <input id="unit" type="text" class="form-control" placeholder="請輸入單位" v-model="tempProduct.unit">
                   </div>
                 </div>
   
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="origin_price">原價</label>
-                    <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價">
+                    <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model="tempProduct.origin_price">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="price">售價</label>
-                    <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價">
+                    <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價" v-model="tempProduct.price">
                   </div>
                 </div>
                 <hr>
   
                 <div class="form-group">
                   <label for="description">產品描述</label>
-                  <textarea id="description" type="text" class="form-control" placeholder="請輸入產品描述">
+                  <textarea id="description" type="text" class="form-control" placeholder="請輸入產品描述" v-model="tempProduct.description">
                       </textarea>
                 </div>
                 <div class="form-group">
                   <label for="content">說明內容</label>
-                  <textarea id="description" type="text" class="form-control" placeholder="請輸入說明內容">
+                  <textarea id="content" type="text" class="form-control" placeholder="請輸入說明內容" v-model="tempProduct.content">
                       </textarea>
                 </div>
                 <div class="form-group">
                   <div class="form-check">
-                    <input id="is_enabled" class="form-check-input" type="checkbox" :true-value="1" :false-value="0">
+                    <input id="is_enabled" class="form-check-input" type="checkbox" :true-value="1" :false-value="0" v-model="tempProduct.is_enabled">
                     <label class="form-check-label" for="is_enabled">是否啟用</label>
                   </div>
                 </div>
@@ -144,7 +157,7 @@
             <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
               取消
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" @click="updateProduct">
               確認
             </button>
           </div>
@@ -169,7 +182,7 @@
             <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
               取消
             </button>
-            <button type="button" class="btn btn-danger">
+            <button type="button" class="btn btn-danger" @click="delProduct">
               確認刪除
             </button>
           </div>
@@ -187,7 +200,7 @@
     integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
     integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/vue@next"></script>
+  <!-- <script src="https://unpkg.com/vue@next"></script> -->
   <script src="./js/product.js" type="module"></script>
 </body>
 </html>
