Fix  -number type to origin_price、price input Add  -origin_price、price no value alert

--- a/product.html
+++ b/product.html
@@ -125,11 +125,11 @@
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="origin_price">原價</label>
-                    <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model="tempProduct.origin_price">
+                    <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model.number="tempProduct.origin_price">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="price">售價</label>
-                    <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價" v-model="tempProduct.price">
+                    <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價" v-model.number="tempProduct.price">
                   </div>
                 </div>
                 <hr>
